--- a/assets/cats_grid styles.css
+++ b/assets/cats_grid styles.css
@@ -1256,7 +1256,7 @@ Responsives
     }
 
     .image-thumbnails {
-        justify-content: space-between;
+        justify-content: flex-start;
     }
     
     .modal-images,
@@ -1361,7 +1361,7 @@ Responsives
     }
 
     .image-thumbnails {
-        justify-content: space-between;
+        justify-content: flex-start;
     }
 
     .thumbnail {
@@ -1516,7 +1516,7 @@ Responsives
     }
 
     .image-thumbnails {
-        justify-content: space-between;
+        justify-content: flex-start;
     }
     
     .thumbnail {
